# mtg-calendar

scraper/: article-scraper.py  articles.json  list-scraper.py  pyproject.toml
website/: package-lock.json  package.json
website/src/: App.jsx  Calendar.jsx
