[project]
name = "mtg-event-scraper"
version = "0.1.0"
dependencies = [
    "ansible==13.2.0"
    "ansible-core==2.20.1"
    "attrs==25.4.0"
    "awscli==1.43.15"
    "bcrypt==5.0.0"
    "botocore==1.42.9"
    "btrfsutil==6.17.1"
    "certifi==2025.11.12"
    "cffi==2.0.0"
    "colorama==0.4.6"
    "cryptography==46.0.3"
    "docutils==0.22.3"
    "filelock==3.20.0"
    "fluidity-sm==0.2.1"
    "invoke==2.2.1"
    "Jinja2==3.1.6"
    "jmespath==1.0.1"
    "lensfun==0.3.4"
    "lexicon==3.0.0"
    "MarkupSafe==3.0.2"
    "nftables==0.1"
    "packaging==25.0"
    "paramiko==4.0.0"
    "ply==3.11"
    "pyasn1==0.6.1"
    "pycparser==2.23"
    "PyGObject==3.54.5"
    "PyNaCl==1.6.1"
    "python-dateutil==2.9.0"
    "PyYAML==6.0.3"
    "resolvelib==1.2.1"
    "rsa==4.9.1"
    "s3transfer==0.16.0"
    "six==1.17.0"
    "typing_extensions==4.15.0"
    "urllib3==2.6.2"
    "wheel==0.45.1"
]
